--- a/composer.json
+++ b/composer.json
@@ -8,16 +8,7 @@
         "illuminate/database": "^5.3",
         "illuminate/pagination": "^5.3"
     },
-    "require-dev": {
-        "phpunit/phpunit": ">=4.8 < 6.0"
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
     "scripts": {
-        "start": "php -S 0.0.0.0:4000 -t public public/index.php",
-        "test": "phpunit"
+        "start": "php -S 0.0.0.0:4000 -t src/public"
     }
 }
