--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
     "require": {
         "php": ">=5.5.0",
         "slim/slim": "^3.1",
-        "slim/php-view": "^2.0",
         "slim/twig-view": "^2.1",
+        "twig/extensions": "^1.4",
         "monolog/monolog": "^1.17",
         "illuminate/database": "^5.3",
         "illuminate/pagination": "^5.3"
