--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "twig/extensions": "^1.4",
         "monolog/monolog": "^1.17",
         "illuminate/database": "^5.3",
-        "illuminate/pagination": "^5.3"
+        "illuminate/pagination": "^5.3",
+        "zendframework/zend-stdlib": "^3.1"
     },
     "autoload": {
         "psr-4": {
